--- a/nodes/nodefree.yaml
+++ b/nodes/nodefree.yaml
@@ -32,11 +32,74 @@ log-level: info
 mixed-port: 7890
 mode: rule
 proxies:
-- cipher: chacha20-ietf-poly1305
+- cipher: aes-128-gcm
+  name: 🇧🇬_BG_保加利亚
+  password: shadowsocks
+  port: 443
+  server: 149.34.244.82
+  type: ss
+  udp: true
+- cipher: aes-256-cfb
   name: 🇺🇸_US_美国_1
-  password: xjzsiMfTByKjA9URbdXWNp
-  port: 32091
-  server: 51.120.1.158
+  password: amazonskr05
+  port: 443
+  server: 54.244.200.142
+  type: ss
+  udp: true
+- cipher: rc4-md5
+  name: 🇺🇸_US_美国_2
+  password: 14fFPrbezE3HDZzsMOr6
+  port: 8080
+  server: 79.110.53.169
+  type: ss
+  udp: true
+- cipher: aes-256-cfb
+  name: 🇷🇺_RU_俄罗斯_1
+  password: rNBfNuuANFCAk7KB
+  port: 9056
+  server: 217.30.10.18
+  type: ss
+  udp: true
+- cipher: aes-256-cfb
+  name: 🇷🇺_RU_俄罗斯_2
+  password: f8npKgNzdkss2ytn
+  port: 9088
+  server: 217.30.10.18
+  type: ss
+  udp: true
+- cipher: aes-256-gcm
+  name: 🇨🇦_CA_加拿大
+  password: PCnnH6SQSnfoS27
+  port: 8090
+  server: 23.154.136.100
+  type: ss
+  udp: true
+- cipher: aes-256-cfb
+  name: 🇷🇺_RU_俄罗斯_3
+  password: M3t2ZEQcMGRWBjRa
+  port: 9011
+  server: 217.30.10.18
+  type: ss
+  udp: true
+- cipher: aes-256-cfb
+  name: 🇷🇺_RU_俄罗斯_4
+  password: ZET59LF6DvCC8KVt
+  port: 9005
+  server: 217.30.10.18
+  type: ss
+  udp: true
+- cipher: aes-256-cfb
+  name: 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
+  password: amazonskr05
+  port: 443
+  server: 34.222.136.128
+  type: ss
+  udp: true
+- cipher: aes-256-cfb
+  name: 🇷🇺_RU_俄罗斯_5
+  password: FAdUvMJUq5vDgKEq
+  port: 9006
+  server: 217.30.10.18
   type: ss
   udp: true
 - cipher: chacha20-ietf-poly1305
@@ -47,171 +110,52 @@ proxies:
   type: ss
   udp: true
 - cipher: aes-256-cfb
-  name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯
-  password: amazonskr05
-  port: 443
-  server: 52.89.164.115
-  type: ss
-  udp: true
-- cipher: aes-256-cfb
-  name: 🇷🇺_RU_俄罗斯_1
-  password: EXN3S3eQpjE7EJu8
-  port: 9027
-  server: 217.30.10.18
-  type: ss
-  udp: true
-- cipher: aes-256-cfb
-  name: 🇷🇺_RU_俄罗斯_2
-  password: f63gg8EruDnUrmz4
-  port: 9010
-  server: 217.30.10.18
-  type: ss
-  udp: true
-- cipher: aes-256-cfb
-  name: 🇺🇸_US_美国_2
-  password: amazonskr05
-  port: 443
-  server: 44.243.243.198
-  type: ss
-  udp: true
-- cipher: aes-256-cfb
-  name: 🇺🇸_US_美国_3
-  password: amazonskr05
-  port: 443
-  server: 54.218.229.170
-  type: ss
-  udp: true
-- cipher: aes-128-gcm
-  name: 🇮🇷_IR_伊朗->🇩🇪_DE_德国
-  password: 89b90001-4206-4871-a99d-1744d48f215b
-  port: 4001
-  server: 31.59.111.4
-  type: ss
-  udp: true
-- cipher: aes-256-cfb
-  name: 🇷🇺_RU_俄罗斯_3
-  password: JdmRK9gMEqFgs8nP
-  port: 9003
-  server: 217.30.10.18
-  type: ss
-  udp: true
-- cipher: aes-256-cfb
-  name: 🇷🇺_RU_俄罗斯_4
-  password: fG2artUmHfNT2cX7
-  port: 9018
-  server: 217.30.10.18
-  type: ss
-  udp: true
-- cipher: aes-256-cfb
-  name: 🇷🇺_RU_俄罗斯_5
-  password: FAdUvMJUq5vDgKEq
-  port: 9006
-  server: 217.30.10.18
-  type: ss
-  udp: true
-- cipher: aes-256-cfb
   name: 🇷🇺_RU_俄罗斯_6
-  password: UTJA57ypk2XKQpnm
-  port: 9033
+  password: U6qnYRhfyDmn8sgn
+  port: 9041
   server: 217.30.10.18
   type: ss
   udp: true
 - cipher: aes-256-cfb
   name: 🇷🇺_RU_俄罗斯_7
-  password: XPtzA9sCug3SPR4c
-  port: 9025
+  password: rpgbNnU9rDDU4aWZ
+  port: 9094
   server: 217.30.10.18
   type: ss
   udp: true
-- cipher: aes-256-cfb
+- cipher: chacha20-ietf-poly1305
   name: 🇷🇺_RU_俄罗斯_8
-  password: f8npKgNzdkss2ytn
-  port: 9088
-  server: 217.30.10.18
-  type: ss
-  udp: true
-- cipher: chacha20-ietf-poly1305
-  name: 🇱🇻_LV_拉脱维亚
-  password: f8f7aCzcPKbsF8p3
-  port: 990
-  server: 46.183.217.232
-  type: ss
-  udp: true
-- cipher: aes-256-cfb
-  name: 🇷🇺_RU_俄罗斯_9
-  password: UkXRsXvR6buDMG2Y
-  port: 9001
-  server: 217.30.10.18
-  type: ss
-  udp: true
-- cipher: aes-256-cfb
-  name: 🇷🇺_RU_俄罗斯_10
-  password: TN2YqghxeFDKZfLU
-  port: 9037
-  server: 217.30.10.18
-  type: ss
-  udp: true
-- cipher: aes-256-cfb
-  name: 🇺🇸_US_美国_4
-  password: amazonskr05
-  port: 443
-  server: 35.94.51.2
-  type: ss
-  udp: true
-- cipher: aes-256-cfb
-  name: 🇺🇸_US_美国_5
-  password: amazonskr05
-  port: 443
-  server: 34.215.192.217
-  type: ss
-  udp: true
-- cipher: aes-128-gcm
-  name: 🇧🇬_BG_保加利亚->🇺🇸_US_美国
-  password: shadowsocks
-  port: 443
-  server: 149.34.244.82
-  type: ss
-  udp: true
-- cipher: chacha20-ietf-poly1305
-  name: 🇷🇺_RU_俄罗斯_11
   password: ebrYpJsRfFtlKuO2HygBoD
   port: 20255
   server: 62.133.63.154
   type: ss
   udp: true
 - cipher: aes-256-cfb
-  name: 🇷🇺_RU_俄罗斯_12
-  password: S7KwUu7yBy58S3Ga
-  port: 9042
+  name: 🇷🇺_RU_俄罗斯_9
+  password: XPtzA9sCug3SPR4c
+  port: 9025
   server: 217.30.10.18
   type: ss
   udp: true
-- cipher: chacha20-ietf
-  name: 🇨🇳_CN_中国
-  password: asd123456
-  port: 8388
-  server: 194.41.59.80
+- cipher: chacha20-ietf-poly1305
+  name: 🇮🇷_IR_伊朗->🇹🇷_TR_土耳其
+  password: 21586aab-3a37-4f55-b8b7-5ae69572d403
+  port: 1935
+  server: 85.133.241.75
   type: ss
   udp: true
 - cipher: aes-256-cfb
-  name: 🇺🇸_US_美国_6
-  password: amazonskr05
-  port: 443
-  server: 34.222.132.123
-  type: ss
-  udp: true
-- cipher: rc4-md5
-  name: 🇺🇸_US_美国_7
-  password: 14fFPrbezE3HDZzsMOr6
-  port: 8080
-  server: 79.110.53.169
+  name: 🇷🇺_RU_俄罗斯_10
+  password: UkXRsXvR6buDMG2Y
+  port: 9001
+  server: 217.30.10.18
   type: ss
   udp: true
 - cipher: aes-256-cfb
-  name: 🇺🇸_US_美国_8
+  name: 🇺🇸_US_美国_3
   password: amazonskr05
   port: 443
-  server: 35.88.126.102
+  server: 54.201.174.149
   type: ss
   udp: true
 proxy-groups:
@@ -219,62 +163,46 @@ proxy-groups:
   proxies:
   - ♻️ 自动选择
   - DIRECT
+  - 🇧🇬_BG_保加利亚
   - 🇺🇸_US_美国_1
-  - 🇨🇭_CH_瑞士
-  - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯
+  - 🇺🇸_US_美国_2
   - 🇷🇺_RU_俄罗斯_1
   - 🇷🇺_RU_俄罗斯_2
-  - 🇺🇸_US_美国_2
-  - 🇺🇸_US_美国_3
-  - 🇮🇷_IR_伊朗->🇩🇪_DE_德国
+  - 🇨🇦_CA_加拿大
   - 🇷🇺_RU_俄罗斯_3
   - 🇷🇺_RU_俄罗斯_4
+  - 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
   - 🇷🇺_RU_俄罗斯_5
+  - 🇨🇭_CH_瑞士
   - 🇷🇺_RU_俄罗斯_6
   - 🇷🇺_RU_俄罗斯_7
   - 🇷🇺_RU_俄罗斯_8
-  - 🇱🇻_LV_拉脱维亚
   - 🇷🇺_RU_俄罗斯_9
+  - 🇮🇷_IR_伊朗->🇹🇷_TR_土耳其
   - 🇷🇺_RU_俄罗斯_10
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇧🇬_BG_保加利亚->🇺🇸_US_美国
-  - 🇷🇺_RU_俄罗斯_11
-  - 🇷🇺_RU_俄罗斯_12
-  - 🇨🇳_CN_中国
-  - 🇺🇸_US_美国_6
-  - 🇺🇸_US_美国_7
-  - 🇺🇸_US_美国_8
+  - 🇺🇸_US_美国_3
   type: select
 - interval: 300
   name: ♻️ 自动选择
   proxies:
+  - 🇧🇬_BG_保加利亚
   - 🇺🇸_US_美国_1
-  - 🇨🇭_CH_瑞士
-  - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯
+  - 🇺🇸_US_美国_2
   - 🇷🇺_RU_俄罗斯_1
   - 🇷🇺_RU_俄罗斯_2
-  - 🇺🇸_US_美国_2
-  - 🇺🇸_US_美国_3
-  - 🇮🇷_IR_伊朗->🇩🇪_DE_德国
+  - 🇨🇦_CA_加拿大
   - 🇷🇺_RU_俄罗斯_3
   - 🇷🇺_RU_俄罗斯_4
+  - 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
   - 🇷🇺_RU_俄罗斯_5
+  - 🇨🇭_CH_瑞士
   - 🇷🇺_RU_俄罗斯_6
   - 🇷🇺_RU_俄罗斯_7
   - 🇷🇺_RU_俄罗斯_8
-  - 🇱🇻_LV_拉脱维亚
   - 🇷🇺_RU_俄罗斯_9
+  - 🇮🇷_IR_伊朗->🇹🇷_TR_土耳其
   - 🇷🇺_RU_俄罗斯_10
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇧🇬_BG_保加利亚->🇺🇸_US_美国
-  - 🇷🇺_RU_俄罗斯_11
-  - 🇷🇺_RU_俄罗斯_12
-  - 🇨🇳_CN_中国
-  - 🇺🇸_US_美国_6
-  - 🇺🇸_US_美国_7
-  - 🇺🇸_US_美国_8
+  - 🇺🇸_US_美国_3
   tolerance: 50
   type: url-test
   url: http://www.gstatic.com/generate_204
@@ -283,125 +211,93 @@ proxy-groups:
   - 🚀 节点选择
   - ♻️ 自动选择
   - 🎯 全球直连
+  - 🇧🇬_BG_保加利亚
   - 🇺🇸_US_美国_1
-  - 🇨🇭_CH_瑞士
-  - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯
+  - 🇺🇸_US_美国_2
   - 🇷🇺_RU_俄罗斯_1
   - 🇷🇺_RU_俄罗斯_2
-  - 🇺🇸_US_美国_2
-  - 🇺🇸_US_美国_3
-  - 🇮🇷_IR_伊朗->🇩🇪_DE_德国
+  - 🇨🇦_CA_加拿大
   - 🇷🇺_RU_俄罗斯_3
   - 🇷🇺_RU_俄罗斯_4
+  - 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
   - 🇷🇺_RU_俄罗斯_5
+  - 🇨🇭_CH_瑞士
   - 🇷🇺_RU_俄罗斯_6
   - 🇷🇺_RU_俄罗斯_7
   - 🇷🇺_RU_俄罗斯_8
-  - 🇱🇻_LV_拉脱维亚
   - 🇷🇺_RU_俄罗斯_9
+  - 🇮🇷_IR_伊朗->🇹🇷_TR_土耳其
   - 🇷🇺_RU_俄罗斯_10
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇧🇬_BG_保加利亚->🇺🇸_US_美国
-  - 🇷🇺_RU_俄罗斯_11
-  - 🇷🇺_RU_俄罗斯_12
-  - 🇨🇳_CN_中国
-  - 🇺🇸_US_美国_6
-  - 🇺🇸_US_美国_7
-  - 🇺🇸_US_美国_8
+  - 🇺🇸_US_美国_3
   type: select
 - name: 📲 电报信息
   proxies:
   - 🚀 节点选择
   - 🎯 全球直连
+  - 🇧🇬_BG_保加利亚
   - 🇺🇸_US_美国_1
-  - 🇨🇭_CH_瑞士
-  - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯
+  - 🇺🇸_US_美国_2
   - 🇷🇺_RU_俄罗斯_1
   - 🇷🇺_RU_俄罗斯_2
-  - 🇺🇸_US_美国_2
-  - 🇺🇸_US_美国_3
-  - 🇮🇷_IR_伊朗->🇩🇪_DE_德国
+  - 🇨🇦_CA_加拿大
   - 🇷🇺_RU_俄罗斯_3
   - 🇷🇺_RU_俄罗斯_4
+  - 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
   - 🇷🇺_RU_俄罗斯_5
+  - 🇨🇭_CH_瑞士
   - 🇷🇺_RU_俄罗斯_6
   - 🇷🇺_RU_俄罗斯_7
   - 🇷🇺_RU_俄罗斯_8
-  - 🇱🇻_LV_拉脱维亚
   - 🇷🇺_RU_俄罗斯_9
+  - 🇮🇷_IR_伊朗->🇹🇷_TR_土耳其
   - 🇷🇺_RU_俄罗斯_10
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇧🇬_BG_保加利亚->🇺🇸_US_美国
-  - 🇷🇺_RU_俄罗斯_11
-  - 🇷🇺_RU_俄罗斯_12
-  - 🇨🇳_CN_中国
-  - 🇺🇸_US_美国_6
-  - 🇺🇸_US_美国_7
-  - 🇺🇸_US_美国_8
+  - 🇺🇸_US_美国_3
   type: select
 - name: Ⓜ️ 微软服务
   proxies:
   - 🎯 全球直连
   - 🚀 节点选择
+  - 🇧🇬_BG_保加利亚
   - 🇺🇸_US_美国_1
-  - 🇨🇭_CH_瑞士
-  - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯
+  - 🇺🇸_US_美国_2
   - 🇷🇺_RU_俄罗斯_1
   - 🇷🇺_RU_俄罗斯_2
-  - 🇺🇸_US_美国_2
-  - 🇺🇸_US_美国_3
-  - 🇮🇷_IR_伊朗->🇩🇪_DE_德国
+  - 🇨🇦_CA_加拿大
   - 🇷🇺_RU_俄罗斯_3
   - 🇷🇺_RU_俄罗斯_4
+  - 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
   - 🇷🇺_RU_俄罗斯_5
+  - 🇨🇭_CH_瑞士
   - 🇷🇺_RU_俄罗斯_6
   - 🇷🇺_RU_俄罗斯_7
   - 🇷🇺_RU_俄罗斯_8
-  - 🇱🇻_LV_拉脱维亚
   - 🇷🇺_RU_俄罗斯_9
+  - 🇮🇷_IR_伊朗->🇹🇷_TR_土耳其
   - 🇷🇺_RU_俄罗斯_10
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇧🇬_BG_保加利亚->🇺🇸_US_美国
-  - 🇷🇺_RU_俄罗斯_11
-  - 🇷🇺_RU_俄罗斯_12
-  - 🇨🇳_CN_中国
-  - 🇺🇸_US_美国_6
-  - 🇺🇸_US_美国_7
-  - 🇺🇸_US_美国_8
+  - 🇺🇸_US_美国_3
   type: select
 - name: 🍎 苹果服务
   proxies:
   - 🚀 节点选择
   - 🎯 全球直连
+  - 🇧🇬_BG_保加利亚
   - 🇺🇸_US_美国_1
-  - 🇨🇭_CH_瑞士
-  - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯
+  - 🇺🇸_US_美国_2
   - 🇷🇺_RU_俄罗斯_1
   - 🇷🇺_RU_俄罗斯_2
-  - 🇺🇸_US_美国_2
-  - 🇺🇸_US_美国_3
-  - 🇮🇷_IR_伊朗->🇩🇪_DE_德国
+  - 🇨🇦_CA_加拿大
   - 🇷🇺_RU_俄罗斯_3
   - 🇷🇺_RU_俄罗斯_4
+  - 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
   - 🇷🇺_RU_俄罗斯_5
+  - 🇨🇭_CH_瑞士
   - 🇷🇺_RU_俄罗斯_6
   - 🇷🇺_RU_俄罗斯_7
   - 🇷🇺_RU_俄罗斯_8
-  - 🇱🇻_LV_拉脱维亚
   - 🇷🇺_RU_俄罗斯_9
+  - 🇮🇷_IR_伊朗->🇹🇷_TR_土耳其
   - 🇷🇺_RU_俄罗斯_10
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇧🇬_BG_保加利亚->🇺🇸_US_美国
-  - 🇷🇺_RU_俄罗斯_11
-  - 🇷🇺_RU_俄罗斯_12
-  - 🇨🇳_CN_中国
-  - 🇺🇸_US_美国_6
-  - 🇺🇸_US_美国_7
-  - 🇺🇸_US_美国_8
+  - 🇺🇸_US_美国_3
   type: select
 - name: 🎯 全球直连
   proxies:
@@ -424,32 +320,24 @@ proxy-groups:
   - 🚀 节点选择
   - 🎯 全球直连
   - ♻️ 自动选择
+  - 🇧🇬_BG_保加利亚
   - 🇺🇸_US_美国_1
-  - 🇨🇭_CH_瑞士
-  - 🇺🇸_US_美国->🇷🇺_RU_俄罗斯
+  - 🇺🇸_US_美国_2
   - 🇷🇺_RU_俄罗斯_1
   - 🇷🇺_RU_俄罗斯_2
-  - 🇺🇸_US_美国_2
-  - 🇺🇸_US_美国_3
-  - 🇮🇷_IR_伊朗->🇩🇪_DE_德国
+  - 🇨🇦_CA_加拿大
   - 🇷🇺_RU_俄罗斯_3
   - 🇷🇺_RU_俄罗斯_4
+  - 🇺🇸_US_美国->🇦🇺_AU_澳大利亚
   - 🇷🇺_RU_俄罗斯_5
+  - 🇨🇭_CH_瑞士
   - 🇷🇺_RU_俄罗斯_6
   - 🇷🇺_RU_俄罗斯_7
   - 🇷🇺_RU_俄罗斯_8
-  - 🇱🇻_LV_拉脱维亚
   - 🇷🇺_RU_俄罗斯_9
+  - 🇮🇷_IR_伊朗->🇹🇷_TR_土耳其
   - 🇷🇺_RU_俄罗斯_10
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇧🇬_BG_保加利亚->🇺🇸_US_美国
-  - 🇷🇺_RU_俄罗斯_11
-  - 🇷🇺_RU_俄罗斯_12
-  - 🇨🇳_CN_中国
-  - 🇺🇸_US_美国_6
-  - 🇺🇸_US_美国_7
-  - 🇺🇸_US_美国_8
+  - 🇺🇸_US_美国_3
   type: select
 rules:
 - DOMAIN-SUFFIX,acl4.ssr,🎯 全球直连
